fixed: not centered content inside schedule canvas entity elements

--- a/src/app/modules/shared-module/components/single-schedule-entity-block/single-schedule-entity-block.component.scss
+++ b/src/app/modules/shared-module/components/single-schedule-entity-block/single-schedule-entity-block.component.scss
@@ -27,6 +27,9 @@
     border-radius: var(--borderRadius);
     overflow: hidden;
     color: var(--mainBlackColor);
+    p {
+        text-align: center;
+    }
     .schedule-block__anchor-element {
         text-decoration: underline;
         &.anchor--disable-events {
